# mujoco_learning

./: README.md  directory.md
API-MJC/: pointer.xml
API-MJCF/: deep_ray.xml  force.xml  mecanum.xml  vis_cfg.xml
CPP/Chapter1-make/: CMakeLists.txt  basic.cc  tutorial.md
CPP/Chapter1-view/: CMakeLists.txt  tutorial.md
CPP/Chapter2-view&step/: CMakeLists.txt  basic.cc  tutorial.md
CPP/Chapter2-view&step/.cache/clangd/index/: basic.cc.E1832A034FE16463.idx
CPP/Chapter3-get_obj/: CMakeLists.txt  get_obj.cc  tutorial.md
CPP/Chapter4-sensor_data/: sensor_data.cc  tutorial.md
CPP/Chapter5-draw/: CMakeLists.txt  draw.cpp  tutorial.md
CPP/Chapter6-force/: CMakeLists.txt  force.cpp
CPP/Chapter7-vis_cfg/: CMakeLists.txt  vis_cfg.cpp
CPP/Chapter7-vis_cfg/.cache/clangd/index/: basic.cc.A2E09EE2BFF9391E.idx  draw.cpp.F5FD121E741F1371.idx  force.cpp.94D899AD9B24F2F8.idx
CPP/Chapter7-vis_cfg/b/: CMakeCache.txt  Makefile  cmake_install.cmake  vis_cfg
CPP/Chapter8-ray/: CMakeLists.txt  ray.cpp
MJCF/Chapter0-install/: tutorial.md
MJCF/Chapter1-meet mujoco/: scence.xml
MJCF/Chapter1-meet_mujoco/: humanoid_body.xml  scence.xml  tutorial.md
MJCF/Chapter10-from_CAD_software/: del_models.py  get_body_geom.py  get_geom_data.py  mass.csv  tutorial.md
MJCF/Chapter11-equality/: connecting_rod.xml  tutorial.md
MJCF/Chapter12-default/: default.xml  tutorial.md
MJCF/Chapter13-composite/: scence.xml  tutorial.md
MJCF/Chapter14-flex/: scene.xml  trampoline.xml  trampoline2.xml  tutorial.md
MJCF/Chapter15-keyframe/: key.xml  scene.xml  tutorial.md
MJCF/Chapter16-solimp&solref/: scene.xml  tutorial.md
MJCF/Chapter2-virtual_world/: scence.xml  tutorial.md
MJCF/Chapter3-worldbody/: scence.xml  tutorial.md
MJCF/Chapter4-joint/: scence.xml  tutorial.md
MJCF/Chapter5-friction/: friction.py  scence.xml  tutorial.md
MJCF/Chapter5-friction/摩擦力计算/: CMakeLists.txt  main2.cpp
MJCF/Chapter6-actuator/: scence.xml  tutorial.md
MJCF/Chapter7-light&replicate/: scence.xml  tutorial.md
MJCF/Chapter8-tendon/: mecanum.xml  omnidirectional.xml  spatial.xml  tutorial.md
MJCF/Chapter9-sensor/: scence.xml  tutorial.md
MJCF/asset/: README.md
MJCF/摩擦力计算/: LeastSquares.cpp  minL.cpp
Python/Chapter1-view/: view.py
Python/Chapter1-view&step/: view.py
Python/Chapter2-get_obj/: get_obj.py
Python/Chapter3-sensor_data/: sensor_data.py  tutorial.md
Python/Chapter4-draw/: MUJOCO_LOG.TXT  draw.py
Python/Chapter5-force/: force.py
Python/Chapter6-vis_cfg/: vis_cfg.py
Python/Chapter7-ray/: ray.py  vis_cfg.py
extend/deep_camera/: CMakeLists.txt  deep_camera.hpp  deep_ray.xml  ray.cpp  readme.md
extend/jax/: jax_benchmark.py  jax_test1.py  mjx_batch.py  mjx_batch_env.py  mjx_ray.py  mjx_view.py  mujoco_ray.py  unset_cuda.sh
extend/mujoco_red_stone/: README.md  red_stone.py  scence.xml
extend/piper/: MUJOCO_LOG.TXT  piper_touch.py
extend/plugin/ray_caster/ROS2/C++/: CMakeLists.txt  mujoco_thread.cpp  mujoco_thread.h  sensor_data.cpp
extend/plugin/ray_caster/ROS2/C++/.cache/clangd/index/: mujoco_thread.cpp.CED12E746128E192.idx  mujoco_thread.h.5E851EBF5088B761.idx  ros_test.cpp.69BD6CE039B32AEB.idx  sensor_data.cc.D561F1AF396F5E75.idx  sensor_data.cpp.49D83230E332DAAC.idx
extend/soft_contact/: scene.xml  soft_contact.py  tutorial.md
extend/solimp&solref/: tutorial.md
extend/touch/: readme.md  touch_flex.xml  touch_pad.xml
extend/touchpad/: CMakeLists.txt  readme.md  touch_pad.xml  touchpad.cpp
(+506 files in other folders)
