cmake_minimum_required(VERSION 3.10)
project(F)
find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR})
add_executable(LeastSquares LeastSquares.cpp)
target_link_libraries(LeastSquares ${EIGEN3_LIBS})
add_executable(f2 main2.cpp)
target_link_libraries(f2 ${EIGEN3_LIBS})
add_executable(minL minL.cpp)
target_link_libraries(minL ${EIGEN3_LIBS})